force-billing/main/default/objects/SubscriberTelemetry__e/SubscriberTelemetry__e.object-meta.xml
<CustomObject>
    <label>Subscriber Telemetry</label>
    <pluralLabel>Subscriber Telemetry</pluralLabel>
</CustomObject>