force-billing/main/default/objects/SubscriberTelemetry__e/fields/ApexTrigger__c.field-meta.xml
<CustomField>
    <fullName>ApexTrigger__c</fullName>
    <label>Apex Trigger</label>
    <length>32</length>
    <type>Text</type>
</CustomField>