force-billing/main/default/objects/SubscriberTelemetry__e/fields/LastError__c.field-meta.xml
<CustomField>
    <fullName>LastError__c</fullName>
    <label>Last Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>