force-billing/main/default/objects/SubscriberTelemetry__e/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>