force-billing/main/default/objects/SubscriberTelemetry__e/fields/Retries__c.field-meta.xml
<CustomField>
    <fullName>Retries__c</fullName>
    <label>Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>