force-billing/main/default/objects/SubscriberTelemetry__e/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>